--- a/src/assets/css/categorie.less
+++ b/src/assets/css/categorie.less
@@ -36,6 +36,39 @@
 
 	.selectedItem{
 		width: 100%;
+		position: relative;
+
+		.images{
+			background-color: white;
+			text-align: center;
+
+			.carousel-item{
+				img{
+					width: 100%;
+				}
+			}
+			.miniatures{
+				img{
+					width: 22%;
+					margin-right: 1%;
+
+					border-style: solid;
+					border-color: #FFF;
+					border-width: 3px;
+				}
+			}
+		}
+		.info{
+
+		}
+		.close{
+			position: absolute;
+			top: 0;
+			right: 0;
+			img{
+				width: 20px;
+			}
+		}
 	}
 
 	.listItem{
