--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,42 @@
             <p>Artificial Intelligence</p>
           </div>
           <div class="categorie_content">
-            <div class="selectedItem" [ngClass]="{'selectedItem_invisible': !isSelectedCategorie(0)}">
+
+            <div class="selectedItem row" [ngClass]="{'selectedItem_invisible': !isSelectedCategorie(0)}">
+
+              <div class="images col-6">
+
+                <div id="carousel_item_0_0" class="carousel slide" data-ride="carousel" data-interval="2000">
+                  <div class="carousel-inner">
+                    <div class="carousel-item active">
+                      <img class="d-block" src="../assets/img/projects/astar_sample.png" alt="">
+                    </div>
+                    <div class="carousel-item">
+                      <img class="d-block" src="../assets/img/projects/flocking_sample.png" alt="">
+                    </div>
+                    <div class="carousel-item">
+                      <img class="d-block" src="../assets/img/projects/genetic_sample.png" alt="">
+                    </div>
+                  </div>
+                </div>
+
+                <div class="miniatures">
+                  <img src="../assets/img/projects/astar_sample.png" alt=""
+                  data-target="#carousel_item_0_0" data-slide-to="0">
+                  <img src="../assets/img/projects/flocking_sample.png" alt=""
+                  data-target="#carousel_item_0_0" data-slide-to="1">
+                  <img src="../assets/img/projects/genetic_sample.png" alt=""
+                  data-target="#carousel_item_0_0" data-slide-to="2">
+                </div>
+              </div>
+
+              <div class="info col-6">
+              </div>
+
+              <div class="close">
+                <img src="../assets/img/icons/close.ico" alt="" (click)="selectItem(-1,-1)">
+              </div>
+
             </div>
 
             <div class="listItem row" [ngClass]="{'list_invisible': isSelectedCategorie(0)}">
