--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,24 @@
 <div id="main_page" class="page">
 
   <div class="page_header">
-    Header
+    <div class="container">
+    <div class="row">
+      <div class="logo col-10">
+        <img src="../assets/img/projects/astar_sample.png" alt="">
+      </div>
+      <div class="icon col-2">
+        <img src="../assets/img/projects/astar_sample.png" alt="">
+        <img src="../assets/img/projects/astar_sample.png" alt="">
+      </div>
+    </div>
+    </div>
   </div>
 
   <div class="page_center container">
     <div class="page_content row">
       <div class="central_info col-9">
 
+        <!-- Categorie -->
         <div class="categorie">
           <div class="categorie_title">
             <p>Artificial Intelligence</p>
@@ -29,6 +40,9 @@
                     <div class="carousel-item">
                       <img class="d-block" src="../assets/img/projects/genetic_sample.png" alt="">
                     </div>
+                    <!--<div class="embed-responsive embed-responsive-4by3 carousel-item">
+                      <iframe class="d-block embed-responsive-item" src="https://www.youtube.com/watch?v=C4lg8a-40xs"></iframe>
+                    </div>-->
                   </div>
                 </div>
 
@@ -39,6 +53,9 @@
                   data-target="#carousel_item_0_0" data-slide-to="1">
                   <img src="../assets/img/projects/genetic_sample.png" alt=""
                   data-target="#carousel_item_0_0" data-slide-to="2">
+                  <a href="https://www.youtube.com/watch?v=C4lg8a-40xs" target="_blank">
+                    <img src="../assets/img/projects/genetic_sample.png" alt="">
+                  </a>
                 </div>
               </div>
 
@@ -80,16 +97,17 @@
             </div>
           </div>
         </div>
+        <!-- END Categorie -->
 
       </div>
       <div class="lateral_info col-3">
         EEEE
       </div>
-    </div>
-  </div>
 
-  <div class="page_footer">
-    Footer
+      <div class="page_footer col-12">
+        Footer
+      </div>
+    </div>
   </div>
 
 </div>
