--- a/src/assets/css/main.less
+++ b/src/assets/css/main.less
@@ -35,7 +35,9 @@
 
 .central_info{
 	background-color: #EEE;
+	padding-bottom: 2*@lg-margin;
 }
 .lateral_info{
 	background-color: #DDD;
+	padding-bottom: 2*@lg-margin;
 }
