--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,11 +4,11 @@
     <div class="container">
     <div class="row">
       <div class="logo col-10">
-        <img src="../assets/img/projects/astar_sample.png" alt="">
+        <img src="../assets/img/logo+name+lg.png" alt="Edwyn Batista">
       </div>
       <div class="icon col-2">
-        <img src="../assets/img/projects/astar_sample.png" alt="">
-        <img src="../assets/img/projects/astar_sample.png" alt="">
+        <a href="https://github.com/Edwyn-Gamagora2017" target="_blank"><img src="../assets/img/icons/github_white.png" alt="github"></a>
+        <a href="" target="_blank"><img src="../assets/img/icons/linkedin_white.png" alt="linkedin"></a>
       </div>
     </div>
     </div>
@@ -105,8 +105,22 @@
       </div>
 
       <div class="page_footer col-12">
-        Footer
+        <a class="item" href="https://github.com/Edwyn-Gamagora2017" target="_blank">
+          <img src="../assets/img/icons/github_red.png" alt="github">
+          <p>GitHub</p>
+        </a>
+        <a class="item" href="https://github.com/Edwyn-Gamagora2017" target="_blank">
+          <img src="../assets/img/icons/linkedin_red.png" alt="linkedin">
+          <p>Linkedin</p>
+        </a>
+        <span class="item">
+          <img src="../assets/img/icons/email_red.png" alt="email">
+          <p>edwynluis@gmail.com</p>
+        </span>
       </div>
+                <!--<div class="logo col-3">
+            <img src="../assets/img/logo+name+lg_gray.png" alt="Edwyn Batista">
+          </div>-->
     </div>
   </div>
 
