--- a/src/assets/css/main.less
+++ b/src/assets/css/main.less
@@ -6,11 +6,14 @@
 @footer_size : 100px;
 
 @default_color_red : #9B3737;
+@default_color_red_soft : #ffe3e3;
 @default_color_gray : #EEE;
 
 .page{
 	text-align: center;
 	font-family: 'Roboto Condensed', sans-serif;
+
+	//background-color: @default_color_red_soft;
 }
 
 .page_header{
@@ -25,12 +28,6 @@
 }
 
 .page_footer{
-	min-height: @footer_size;
-	background-color: #DDD;
-
-	border-style: solid;
-	border-color: #BBB;
-	border-width: 2px 0 0 0;
 }
 
 .central_info{
