--- a/src/assets/css/categorie.less
+++ b/src/assets/css/categorie.less
@@ -59,7 +59,29 @@
 			}
 		}
 		.info{
+			.cell{
+				border-width: 2px;
+				border-color: white;
+				border-style: solid;
+				margin: 1px 0;
+			}
+			.title{
+				font-weight: bold;
+			}
+			.playit{
 
+			}
+			.icon{
+				img{
+					width: 20px;
+				}
+			}
+			.icon:hover{
+				text-decoration: none;
+				img{
+					padding: 1px;
+				}
+			}
 		}
 		.close{
 			position: absolute;
