--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
       </div>
       <div class="icon col-2">
         <a href="https://github.com/Edwyn-Gamagora2017" target="_blank"><img src="../assets/img/icons/github_white.png" alt="github"></a>
-        <a href="" target="_blank"><img src="../assets/img/icons/linkedin_white.png" alt="linkedin"></a>
+        <a href="https://linkedin.com/in/edwyn-batista" target="_blank"><img src="../assets/img/icons/linkedin_white.png" alt="linkedin"></a>
       </div>
     </div>
     </div>
@@ -60,6 +60,25 @@
               </div>
 
               <div class="info col-6">
+                <div class="row"><div class="cell col-12 title">Title</div></div>
+                <div class="row"><div class="cell col-12 desc">Description</div></div>
+                <div class="row">
+                  <div class="cell col-3 label">Key points:</div>
+                  <div class="cell col-9 content"></div>
+                </div>
+                <div class="row">
+                  <div class="cell col-3 label">Tools:</div>
+                  <div class="cell col-9 content"></div>
+                </div>
+                <div class="row">
+                  <a class="cell col-6 playit icon" href="https://github.com/Edwyn-Gamagora2017" target="_blank">
+                    Play it!
+                  </a>
+                  <a class="cell col-6 icon" href="https://github.com/Edwyn-Gamagora2017" target="_blank">
+                    Repository
+                    <img src="../assets/img/icons/github.png" alt="github">
+                  </a>
+                </div>
               </div>
 
               <div class="close">
@@ -109,9 +128,9 @@
           <img src="../assets/img/icons/github_red.png" alt="github">
           <p>GitHub</p>
         </a>
-        <a class="item" href="https://github.com/Edwyn-Gamagora2017" target="_blank">
+        <a class="item" href="https://linkedin.com/in/edwyn-batista" target="_blank">
           <img src="../assets/img/icons/linkedin_red.png" alt="linkedin">
-          <p>Linkedin</p>
+          <p>LinkedIn</p>
         </a>
         <span class="item">
           <img src="../assets/img/icons/email_red.png" alt="email">
