--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -120,10 +120,10 @@
 
       </div>
       <div class="lateral_info col-3">
-        EEEE
+        <app-whoiam></app-whoiam>
       </div>
 
-      <div class="page_footer col-12">
+      <div id="footer_contact" class="page_footer col-12">
         <a class="item" href="https://github.com/Edwyn-Gamagora2017" target="_blank">
           <img src="../assets/img/icons/github_red.png" alt="github">
           <p>GitHub</p>
