--- a/src/app/whoiam/whoiam.component.html
+++ b/src/app/whoiam/whoiam.component.html
@@ -22,7 +22,6 @@
 		<p>
 			Formation
 		</p>
-		- Bachelor in Computer Science (UFRN - Brazil/2015)
-		- Academic Exchange (Radboud - Netherlands/2013)
+		Bachelor in Computer Science (UFRN - Brazil/2015)
 	</span>
 </div>
