--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -134,7 +134,7 @@
         </a>
         <span class="item">
           <img src="../assets/img/icons/email_red.png" alt="email">
-          <p>edwynluis@gmail.com</p>
+          <p>edwynbatista@gmail.com</p>
         </span>
       </div>
                 <!--<div class="logo col-3">
